package design_patterns.creational.factory.shapes;

public interface Shape {

    void draw();

}